changes in backend tests